refactor(ingest): 重构 Record 类使用工厂方法替代 @Builder
根据新规范，参数 ≤4 个的 Record 使用 of() 工厂方法：
- PublishResult、PublishContext 改用 of() 工厂方法
- OpenAccessInfo、ValidationResult、ProcessResult 移除 @Builder
- PublicationDataReadyEvent 保留 @Builder（8 参数），移除冗余 of()
- 更新相关测试用例